[gd_scene load_steps=9 format=2]

[ext_resource path="res://menus/settings.gd" type="Script" id=1]
[ext_resource path="res://common.theme" type="Theme" id=2]
[ext_resource path="res://fonts/Alice-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://menus/SWAV_17.swav.wav" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 10
extra_spacing_char = -1
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 10
extra_spacing_char = -1
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 10
extra_spacing_char = -1
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 10
extra_spacing_char = -1
font_data = ExtResource( 3 )

[node name="Settings" type="Control"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
window = NodePath("CenterContainer/VBoxContainer/HBoxContainer3/Window")
back = NodePath("CenterContainer/VBoxContainer/HBoxContainer2/Back")
resolutions = NodePath("CenterContainer/VBoxContainer/HBoxContainer3/Resolutions")
popup_key = NodePath("CenterContainer/ChangeKey")
popup_def = NodePath("CenterContainer/RemapDefault")
keyboard1 = NodePath("CenterContainer/VBoxContainer/HBoxContainer/KeyboardControls1")
keyboard2 = NodePath("CenterContainer/VBoxContainer/HBoxContainer/KeyboardControls2")
actions = [ "left", "right", "jump", "interact", "open_inventory", "melee_attack", "ranged_attack" ]
controller = NodePath("CenterContainer/VBoxContainer/HBoxContainer/ControllerControls")
volume = NodePath("CenterContainer/VBoxContainer/HBoxContainer2/Volume")
actions_names = NodePath("CenterContainer/VBoxContainer/HBoxContainer/Actions")

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -96.0
margin_right = 128.0
margin_bottom = 96.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 3.0
margin_top = 17.0
margin_right = 253.0
margin_bottom = 175.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer3" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 250.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Window" type="OptionButton" parent="CenterContainer/VBoxContainer/HBoxContainer3"]
margin_right = 107.0
margin_bottom = 25.0
rect_min_size = Vector2( 50, 20 )
theme = ExtResource( 2 )
text = "Windowed"
align = 1
items = [ "Windowed", null, false, 0, null, "Fullscreen", null, false, 1, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resolutions" type="OptionButton" parent="CenterContainer/VBoxContainer/HBoxContainer3"]
margin_left = 111.0
margin_right = 196.0
margin_bottom = 25.0
rect_min_size = Vector2( 50, 20 )
theme = ExtResource( 2 )
text = "720x576"
align = 1
items = [ "720x576", null, false, 0, null, "800x600", null, false, 1, null, "832x624", null, false, 2, null, "1024x768", null, false, 3, null, "1280x720", null, false, 4, null, "1280x768", null, false, 5, null, "1152x864", null, false, 6, null, "1152x872", null, false, 7, null, "1280x800", null, false, 8, null, "1360x768", null, false, 9, null, "1366x768", null, false, 10, null, "1280x990", null, false, 11, null, "1440x900", null, false, 12, null, "1280x1024", null, false, 13, null, "1680x1050", null, false, 14, null, "1600x1200", null, false, 15, null, "1920x1080", null, false, 16, null, "1920x1200", null, false, 17, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 29.0
margin_right = 250.0
margin_bottom = 157.0
rect_min_size = Vector2( 250, 100 )
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Actions" type="ItemList" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_right = 52.0
margin_bottom = 128.0
rect_min_size = Vector2( 20, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 1 )
items = [ "Left", null, true, "Right", null, true, "Jump", null, true, "Interact", null, true, "Inventory", null, true, "Melee", null, true, "Ranged", null, true ]
auto_height = true

[node name="KeyboardControls1" type="ItemList" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 56.0
margin_right = 109.0
margin_bottom = 128.0
rect_min_size = Vector2( 30, 0 )
focus_neighbour_top = NodePath("../../HBoxContainer3/Window")
focus_neighbour_right = NodePath("../KeyboardControls2")
focus_neighbour_bottom = NodePath("../../HBoxContainer2/Default")
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 2 )
allow_rmb_select = true
auto_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KeyboardControls2" type="ItemList" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 113.0
margin_right = 166.0
margin_bottom = 128.0
rect_min_size = Vector2( 30, 0 )
focus_neighbour_left = NodePath("../KeyboardControls1")
focus_neighbour_top = NodePath("../../HBoxContainer3/Resolutions")
focus_neighbour_right = NodePath("../ControllerControls")
focus_neighbour_bottom = NodePath("../../HBoxContainer2/Default")
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 3 )
auto_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControllerControls" type="ItemList" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 170.0
margin_right = 250.0
margin_bottom = 128.0
rect_min_size = Vector2( 80, 0 )
focus_neighbour_left = NodePath("../KeyboardControls2")
focus_neighbour_top = NodePath("../../HBoxContainer3/Resolutions")
focus_neighbour_bottom = NodePath("../../HBoxContainer2/Volume")
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 4 )
auto_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 161.0
margin_right = 250.0
margin_bottom = 186.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Back" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer2"]
margin_left = 14.0
margin_right = 61.0
margin_bottom = 25.0
rect_min_size = Vector2( 30, 25 )
theme = ExtResource( 2 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Default" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer2"]
margin_left = 65.0
margin_right = 131.0
margin_bottom = 25.0
rect_min_size = Vector2( 30, 25 )
theme = ExtResource( 2 )
text = "Default"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Volume" type="HSlider" parent="CenterContainer/VBoxContainer/HBoxContainer2"]
margin_left = 135.0
margin_right = 235.0
margin_bottom = 25.0
rect_min_size = Vector2( 100, 20 )
size_flags_vertical = 1
theme = ExtResource( 2 )
min_value = -80.0
max_value = 0.0
rounded = true
tick_count = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChangeKey" type="ConfirmationDialog" parent="CenterContainer"]
margin_left = 28.0
margin_top = 61.0
margin_right = 228.0
margin_bottom = 131.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
popup_exclusive = true
window_title = "Change key..."
dialog_autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RemapDefault" type="ConfirmationDialog" parent="CenterContainer"]
margin_left = 28.0
margin_top = 40.0
margin_right = 228.0
margin_bottom = 152.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
popup_exclusive = true
window_title = "Default"
dialog_text = "Are you sure you want to change back to default settings?"
dialog_autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -30.0
bus = "Global"

[connection signal="visibility_changed" from="." to="." method="_on_Settings_visibility_changed"]
[connection signal="item_selected" from="CenterContainer/VBoxContainer/HBoxContainer3/Window" to="." method="_on_Window_item_selected"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer3/Window" to="." method="_on_Window_pressed"]
[connection signal="item_selected" from="CenterContainer/VBoxContainer/HBoxContainer3/Resolutions" to="." method="_on_Resolutions_item_selected"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer3/Resolutions" to="." method="_on_Resolutions_pressed"]
[connection signal="focus_exited" from="CenterContainer/VBoxContainer/HBoxContainer/KeyboardControls1" to="." method="_on_KeyboardControls1_focus_exited"]
[connection signal="gui_input" from="CenterContainer/VBoxContainer/HBoxContainer/KeyboardControls1" to="." method="_on_KeyboardControls1_gui_input"]
[connection signal="item_activated" from="CenterContainer/VBoxContainer/HBoxContainer/KeyboardControls1" to="." method="_on_KeyboardControls1_item_activated"]
[connection signal="focus_exited" from="CenterContainer/VBoxContainer/HBoxContainer/KeyboardControls2" to="." method="_on_KeyboardControls2_focus_exited"]
[connection signal="gui_input" from="CenterContainer/VBoxContainer/HBoxContainer/KeyboardControls2" to="." method="_on_KeyboardControls2_gui_input"]
[connection signal="item_activated" from="CenterContainer/VBoxContainer/HBoxContainer/KeyboardControls2" to="." method="_on_KeyboardControls2_item_activated"]
[connection signal="focus_exited" from="CenterContainer/VBoxContainer/HBoxContainer/ControllerControls" to="." method="_on_ControllerControls_focus_exited"]
[connection signal="gui_input" from="CenterContainer/VBoxContainer/HBoxContainer/ControllerControls" to="." method="_on_ControllerControls_gui_input"]
[connection signal="item_activated" from="CenterContainer/VBoxContainer/HBoxContainer/ControllerControls" to="." method="_on_ControllerControls_item_activated"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer2/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer2/Default" to="." method="_on_Default_pressed"]
[connection signal="value_changed" from="CenterContainer/VBoxContainer/HBoxContainer2/Volume" to="." method="_on_Volume_value_changed"]
[connection signal="about_to_show" from="CenterContainer/ChangeKey" to="." method="_on_ChangeKey_about_to_show"]
[connection signal="confirmed" from="CenterContainer/ChangeKey" to="." method="_on_ChangeKey_confirmed"]
[connection signal="popup_hide" from="CenterContainer/ChangeKey" to="." method="_on_ChangeKey_popup_hide"]
[connection signal="about_to_show" from="CenterContainer/RemapDefault" to="." method="_on_RemapDefault_about_to_show"]
[connection signal="confirmed" from="CenterContainer/RemapDefault" to="." method="_on_RemapDefault_confirmed"]
[connection signal="popup_hide" from="CenterContainer/RemapDefault" to="." method="_on_RemapDefault_popup_hide"]
